updated about page

--- a/content/about.njk
+++ b/content/about.njk
@@ -13,8 +13,8 @@ const eleventyNavigation = {
 
 <p>I earned my Master's degree in Computer Science from the University of Illinois Urbana-Champaign.</p>
 
-<p>My technical interests are varied and include large language models, agentic AI and cybersecurity.</p>
+<p>My technical interests are varied and include machine learning, large language models, agentic AI, human-computer interaction and cybersecurity.</p>
 
-<strong>Looking for an engineer for your startup? Let's talk. Send an <a href="#" id="sendEmailLink">email</a>, or connect on <a href="https://www.linkedin.com/in/umar-mahmud/")>LinkedIn</a>.</strong>
+<strong>Looking for an engineer for your startup? Let's talk. Send a <a href="#" id="sendEmailLink">message</a>, or connect on <a href="https://www.linkedin.com/in/umar-mahmud/">LinkedIn</a>.</strong>
 
 <script src="/js/obfuscate-email.js" defer></script>
